[tool.poetry]
name = "pdf-template"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <email@email.com>"]
readme = "README.md"
packages = [{include = "pdf_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fpdf = "^1.7.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
